# axum-askama-template

./: .env.example  .gitignore  Cargo.toml  README.md  justfile
migrations/: 20250831221032_create_users_table.sql
src/: lib.rs  main.rs  routes.rs  state.rs  util.rs
src/handlers/: auth.rs  public.rs
src/models/: templates.rs  user_form_models.rs
static/css/: auth.css  global.css
static/js/: auth.js
templates/: index.html
templates/pages/: about.html  basetemplate.html  contact.html  home.html  login.html  notfound.html  server-error.html  signup.html
templates/partials/: navigation.html
